syntax = "proto3";

package follow;

option go_package = "github.com/pratilipi/follow-service/proto/follow";

service FollowService {
  rpc Follow(FollowRequest) returns (FollowResponse);
  rpc Unfollow(UnfollowRequest) returns (UnfollowResponse);
  rpc GetFollowers(GetFollowersRequest) returns (GetFollowersResponse);
  rpc GetFollowing(GetFollowingRequest) returns (GetFollowingResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message FollowRequest {
  int32 follower_id = 1;
  int32 following_id = 2;
}

message FollowResponse {
  bool success = 1;
  string message = 2;
}

message UnfollowRequest {
  int32 follower_id = 1;
  int32 following_id = 2;
}

message UnfollowResponse {
  bool success = 1;
  string message = 2;
}

message GetFollowersRequest {
  int32 user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetFollowersResponse {
  repeated User followers = 1;
  int32 total = 2;
}

message GetFollowingRequest {
  int32 user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetFollowingResponse {
  repeated User following = 1;
  int32 total = 2;
}

message GetUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  int32 followers_count = 4;
  int32 following_count = 5;
}
